// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="list-header"
        >
          <div
            className="show-for-mobile"
          >
            Gastos
          </div>
          <div
            className="show-for-desktop"
          >
            Gasto
          </div>
          <div
            className="show-for-desktop"
          >
            Monto
          </div>
        </div>,
        <div
          className="list-body"
        >
          <div
            className="list-item list-item--message"
          >
            <span>
              No existen gastos.
            </span>
          </div>
        </div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="show-for-mobile"
            >
              Gastos
            </div>,
            <div
              className="show-for-desktop"
            >
              Gasto
            </div>,
            <div
              className="show-for-desktop"
            >
              Monto
            </div>,
          ],
          "className": "list-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Gastos",
              "className": "show-for-mobile",
            },
            "ref": null,
            "rendered": "Gastos",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Gasto",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Gasto",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Monto",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Monto",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="list-item list-item--message"
          >
            <span>
              No existen gastos.
            </span>
          </div>,
          "className": "list-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              No existen gastos.
            </span>,
            "className": "list-item list-item--message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No existen gastos.",
            },
            "ref": null,
            "rendered": "No existen gastos.",
            "type": "span",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="list-header"
          >
            <div
              className="show-for-mobile"
            >
              Gastos
            </div>
            <div
              className="show-for-desktop"
            >
              Gasto
            </div>
            <div
              className="show-for-desktop"
            >
              Monto
            </div>
          </div>,
          <div
            className="list-body"
          >
            <div
              className="list-item list-item--message"
            >
              <span>
                No existen gastos.
              </span>
            </div>
          </div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="show-for-mobile"
              >
                Gastos
              </div>,
              <div
                className="show-for-desktop"
              >
                Gasto
              </div>,
              <div
                className="show-for-desktop"
              >
                Monto
              </div>,
            ],
            "className": "list-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Gastos",
                "className": "show-for-mobile",
              },
              "ref": null,
              "rendered": "Gastos",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Gasto",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Gasto",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Monto",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Monto",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="list-item list-item--message"
            >
              <span>
                No existen gastos.
              </span>
            </div>,
            "className": "list-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                No existen gastos.
              </span>,
              "className": "list-item list-item--message",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No existen gastos.",
              },
              "ref": null,
              "rendered": "No existen gastos.",
              "type": "span",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render expenselist correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={
      Array [
        Object {
          "amount": 100,
          "createdAt": 0,
          "description": "cafe",
          "id": "1",
          "note": "",
        },
        Object {
          "amount": 150,
          "createdAt": -345600000,
          "description": "atun",
          "id": "2",
          "note": "",
        },
        Object {
          "amount": 4500,
          "createdAt": 345600000,
          "description": "credit card",
          "id": "3",
          "note": "",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="list-header"
        >
          <div
            className="show-for-mobile"
          >
            Gastos
          </div>
          <div
            className="show-for-desktop"
          >
            Gasto
          </div>
          <div
            className="show-for-desktop"
          >
            Monto
          </div>
        </div>,
        <div
          className="list-body"
        >
          <ExpenseListItem
            amount={100}
            createdAt={0}
            description="cafe"
            id="1"
            note=""
          />
          <ExpenseListItem
            amount={150}
            createdAt={-345600000}
            description="atun"
            id="2"
            note=""
          />
          <ExpenseListItem
            amount={4500}
            createdAt={345600000}
            description="credit card"
            id="3"
            note=""
          />
        </div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="show-for-mobile"
            >
              Gastos
            </div>,
            <div
              className="show-for-desktop"
            >
              Gasto
            </div>,
            <div
              className="show-for-desktop"
            >
              Monto
            </div>,
          ],
          "className": "list-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Gastos",
              "className": "show-for-mobile",
            },
            "ref": null,
            "rendered": "Gastos",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Gasto",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Gasto",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Monto",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Monto",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExpenseListItem
              amount={100}
              createdAt={0}
              description="cafe"
              id="1"
              note=""
            />,
            <ExpenseListItem
              amount={150}
              createdAt={-345600000}
              description="atun"
              id="2"
              note=""
            />,
            <ExpenseListItem
              amount={4500}
              createdAt={345600000}
              description="credit card"
              id="3"
              note=""
            />,
          ],
          "className": "list-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "amount": 100,
              "createdAt": 0,
              "description": "cafe",
              "id": "1",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "amount": 150,
              "createdAt": -345600000,
              "description": "atun",
              "id": "2",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "amount": 4500,
              "createdAt": 345600000,
              "description": "credit card",
              "id": "3",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="list-header"
          >
            <div
              className="show-for-mobile"
            >
              Gastos
            </div>
            <div
              className="show-for-desktop"
            >
              Gasto
            </div>
            <div
              className="show-for-desktop"
            >
              Monto
            </div>
          </div>,
          <div
            className="list-body"
          >
            <ExpenseListItem
              amount={100}
              createdAt={0}
              description="cafe"
              id="1"
              note=""
            />
            <ExpenseListItem
              amount={150}
              createdAt={-345600000}
              description="atun"
              id="2"
              note=""
            />
            <ExpenseListItem
              amount={4500}
              createdAt={345600000}
              description="credit card"
              id="3"
              note=""
            />
          </div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="show-for-mobile"
              >
                Gastos
              </div>,
              <div
                className="show-for-desktop"
              >
                Gasto
              </div>,
              <div
                className="show-for-desktop"
              >
                Monto
              </div>,
            ],
            "className": "list-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Gastos",
                "className": "show-for-mobile",
              },
              "ref": null,
              "rendered": "Gastos",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Gasto",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Gasto",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Monto",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Monto",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExpenseListItem
                amount={100}
                createdAt={0}
                description="cafe"
                id="1"
                note=""
              />,
              <ExpenseListItem
                amount={150}
                createdAt={-345600000}
                description="atun"
                id="2"
                note=""
              />,
              <ExpenseListItem
                amount={4500}
                createdAt={345600000}
                description="credit card"
                id="3"
                note=""
              />,
            ],
            "className": "list-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "amount": 100,
                "createdAt": 0,
                "description": "cafe",
                "id": "1",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "amount": 150,
                "createdAt": -345600000,
                "description": "atun",
                "id": "2",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "amount": 4500,
                "createdAt": 345600000,
                "description": "credit card",
                "id": "3",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
